--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,13 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <kotlin.code.style>official</kotlin.code.style>
         <kotlin.compiler.jvmTarget>1.8</kotlin.compiler.jvmTarget>
+        <serialization.version>1.4.1</serialization.version>
+        <eclipse.jface.version>3.3.0-v20070606-0010</eclipse.jface.version>
+        <eclipse.dltk.version>6.3.0.202006111431</eclipse.dltk.version>
+        <eclipse.dltk.p2.repository>https://download.eclipse.org/technology/dltk/updates-dev/6.3/</eclipse.dltk.p2.repository>
+        <eclipse.core.runtime.version>3.10.0-v20140318-2214</eclipse.core.runtime.version>
+        <eclipse.pdt.version>8.0.0.202112011911</eclipse.pdt.version>
+        <eclipse.pdt.p2.repository>https://download.eclipse.org/tools/pdt/updates/8.0/</eclipse.pdt.p2.repository>
     </properties>
 
     <pluginRepositories>
@@ -34,12 +41,12 @@
         <repository>
             <id>org.eclipse.php</id>
             <layout>p2</layout>
-            <url>https://download.eclipse.org/tools/pdt/updates/8.0/</url>
+            <url>${eclipse.pdt.p2.repository</url>
         </repository>
         <repository>
             <id>org.eclipse.dltk</id>
             <layout>p2</layout>
-            <url>https://download.eclipse.org/technology/dltk/updates-dev/6.3/</url>
+            <url>${eclipse.dltk.p2.repository</url>
         </repository>
     </repositories>
 
@@ -128,22 +135,22 @@
         <dependency>
             <groupId>org.eclipse.php</groupId>
             <artifactId>org.eclipse.php.core</artifactId>
-            <version>8.0.0.202112011911</version>
+            <version>${eclipse.pdt.version}</version>
         </dependency>
         <dependency>
             <groupId>org.eclipse.core</groupId>
             <artifactId>runtime</artifactId>
-            <version>3.10.0-v20140318-2214</version>
+            <version>${eclipse.core.runtime.version}</version>
         </dependency>
         <dependency>
             <groupId>org.eclipse.dltk</groupId>
             <artifactId>org.eclipse.dltk.core</artifactId>
-            <version>6.3.0.202006111431</version>
+            <version>${eclipse.dltk.version}</version>
         </dependency>
         <dependency>
             <groupId>org.eclipse.jface</groupId>
             <artifactId>text</artifactId>
-            <version>3.3.0-v20070606-0010</version>
+            <version>${eclipse.jface.version}</version>
         </dependency>
 
         <dependency>
@@ -152,6 +159,12 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains.kotlinx</groupId>
+            <artifactId>kotlinx-serialization-json</artifactId>
+            <version>${serialization.version}</version>
+        </dependency>
+
     </dependencies>
 
 </project>
