--- a/pom.xml
+++ b/pom.xml
@@ -152,6 +152,12 @@
             <artifactId>text</artifactId>
             <version>${eclipse.jface.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.core</groupId>
+            <artifactId>org.eclipse.core.resources</artifactId>
+            <version>3.7.100</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
